@@ -50,6 +50,7 @@ from astroid.nodes.node_classes import (
     IfExp,
     Import,
     ImportFrom,
+    Interpolation,
     JoinedStr,
     Keyword,
     List,
@@ -76,6 +77,7 @@ from astroid.nodes.node_classes import (
     Slice,
     Starred,
     Subscript,
+    TemplateStr,
     Try,
     TryStar,
     Tuple,
@@ -247,6 +249,7 @@ __all__ = (
     "IfExp",
     "Import",
     "ImportFrom",
+    "Interpolation",
     "JoinedStr",
     "Keyword",
     "Lambda",
@@ -278,6 +281,7 @@ __all__ = (
     "Slice",
     "Starred",
     "Subscript",
+    "TemplateStr",
     "Try",
     "TryStar",
     "Tuple",
